@@ -589,3 +589,13 @@ ul.notifications {
     }
 
 }
+
+// CodeMirror Editor
+// -----------------
+
+.CodeMirror {
+    font-family: @font-family-monospace;
+    font-size: 16px;
+    font-weight: bold;
+    height: 120px;
+}
