@@ -1,7 +1,8 @@
 <div id="content-wrapper">
 
-      <div class="row">
+      <div console class="row">
         <div class="col-lg-12">
+
           <div class="page-header">
             <h1>Console</h1>
           </div>
@@ -33,7 +34,7 @@
             </div>
 
             <div class="form-group">
-              <textarea id="console-statement-input" ng-keydown="stmtKeyDown($event)" ng-model="statement" class="form-control" rows="3" placeholder="select * from demo limit 100;" ng-change="stmtChange()"></textarea>
+              <cli mime-type="text/x-plsql" theme="monokai"></cli>
             </div>
 
             <div class="form-inline">
@@ -65,6 +66,5 @@
           </table>
         </div>
       </div>
-
 
 </div>
