@@ -1,0 +1,7 @@
+<div>
+  <textarea id="console-statement-input"
+            ng-keydown="stmtKeyDown($event)"
+            class="form-control"
+            rows="3"
+            placeholder="select * from demo limit 100;"></textarea>
+</div>
