@@ -6,19 +6,20 @@
   "homepage": "https://github.com/crate/crate-admin/",
   "license": "Apache License, Version 2.0, http://www.apache.org/licenses/LICENSE-2.0",
   "dependencies": {
-    "angular": "~1.2.16",
-    "angular-route": "~1.2.4",
+    "angular": "1.3.0",
+    "angular-route": "1.3.0",
     "angular-truncate": "",
-    "json3": "~3.2.4",
-    "jquery": "~1.9.1",
-    "jquery.cookie": "~1.4.0",
+    "json3": "3.3.2",
+    "jquery": "1.11.1",
+    "jquery.cookie": "",
     "es5-shim": "~2.0.8",
     "bootstrap": "~3.0.3",
     "font-awesome": "~4.0.3",
     "morris.js": "~0.4.3",
     "flot": "~0.8.2",
     "ladda-bootstrap": "~0.1.0",
-    "purl": "~2.3.1"
+    "purl": "~2.3.1",
+    "codemirror": "4.6.0"
   },
   "devDependencies": {
   }
