@@ -1,15 +1,16 @@
 [buildout]
+extends = versions.cfg
 extensions = lovely.buildouthttp
 show-picked-versions = true
-
+versions = versions
 parts =
     nodejs
     nodejs_bin
     npm_bin
     node_modules
     bower_modules
-    bower_script
-    grunt_script
+    bower_bin
+    grunt_bin
 
 [defined-versions]
 nodejs = 0.10.25
@@ -41,16 +42,20 @@ content =#!/bin/sh
 recipe = collective.recipe.cmd
 on_install = true
 on_update = true
-cmds = NODE_PATH="" ${npm_bin:path} install .; echo "\nNodeJS server side modules updated.\n"
+cmds =
+  NODE_PATH="" ${npm_bin:path} install .
+  echo "\nNodeJS server side modules updated.\n"
 
 [bower_modules]
 recipe = collective.recipe.cmd
 dependency = ${node_modules:recipe}
 on_install = true
 on_update = true
-cmds = NODE_PATH=${buildout:directory}/node_modules ${bower_script:output} install; echo "\nBower client-side modules updated.\n"
+cmds =
+  NODE_PATH=${buildout:directory}/node_modules ${bower_bin:output} install
+  echo "\nBower client-side modules updated.\n"
 
-[bower_script]
+[bower_bin]
 recipe = collective.recipe.template
 dependency = ${node_modules:recipe}
 input = inline:
@@ -61,7 +66,7 @@ input = inline:
 output = ${buildout:bin-directory}/bower
 mode = 755
 
-[grunt_script]
+[grunt_bin]
 recipe = collective.recipe.template
 dependency = ${node_modules:recipe}
 input = inline:
