@@ -1,0 +1,12 @@
+[versions]
+collective.recipe.cmd = 0.9
+collective.recipe.template = 1.11
+hexagonit.recipe.cmmi = 2.0
+lovely.buildouthttp = 0.5.0
+lovely.recipe = 1.0.0
+zc.buildout = 2.2.1
+zc.recipe.egg = 2.0.1
+
+# Required by:
+# hexagonit.recipe.cmmi==2.0
+hexagonit.recipe.download = 1.7
